--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,70 @@
-Pomodoro
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <title>Promodoro</title>
+</head>
+<body>
+    <div id="cabecalho">
+        <h1>Pomodoro</h1>
+    </div>
+    <div class="container">
+        <section>
+            <div id="trabalho">
+                <div class="botao" id="work">
+                    <i class="fas fa-arrow-alt-circle-up"></i>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
+                </div>
+                <div class="hour">
+                    <div class="box">
+                        <p class="big">25</p>
+                    </div>
+                    <p>Trabalho</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div id="pausa">
+                <div class="botao" id="pause">
+                    <i class="fas fa-arrow-alt-circle-up"></i>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
+                </div>
+                <div class="hour">
+                    <div class="box">
+                        <p class="big">25</p>
+                    </div>
+                    <p>Pausa</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div id="sessoes">
+                <div class="botao" id="sect">
+                    <i class="fas fa-arrow-alt-circle-up"></i>
+                    <i class="fas fa-arrow-alt-circle-down"></i>
+                </div>
+                <div class="hour">
+                    <div class="box">
+                        <p class="big">3</p>
+                    </div>
+                    <p>Sessões</p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <script src="scripts/api.js"></script>
+</body>
+</html>
+
+
+
+
+<!-- Pomodoro
 Trabalho
 Pausa
 Sessões
-Continuar
+Continuar -->
