Uma mão vai na cabeça e outra vai no meu pal

--- a/inicio.html
+++ b/inicio.html
@@ -16,47 +16,49 @@
         <section>
             <div id="trabalho">
                 <div class="botao" id="work">
-                    <i class="fas fa-arrow-alt-circle-up"></i>
-                    <i class="fas fa-arrow-alt-circle-down"></i>
+                    <a href="#" onclick="upper()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="lower()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
-                        <p class="big">25</p>
+                        <p class="big" id="number">25</p>
                     </div>
-                    <p>Trabalho</p>
+                    <p class="typer">Trabalho</p>
                 </div>
             </div>
         </section>
         <section>
             <div id="pausa">
                 <div class="botao" id="pause">
-                    <i class="fas fa-arrow-alt-circle-up"></i>
-                    <i class="fas fa-arrow-alt-circle-down"></i>
+                    <a href="#" onclick="upper()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="lower()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
-                        <p class="big">5</p>
+                        <p class="big" id="number">5</p>
                     </div>
-                    <p>Pausa</p>
+                    <p class="typer">Pausa</p>
                 </div>
             </div>
         </section>
         <section>
             <div id="sessoes">
                 <div class="botao" id="sect">
-                    <i class="fas fa-arrow-alt-circle-up"></i>
-                    <i class="fas fa-arrow-alt-circle-down"></i>
+                    <a href="#" onclick="upper()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="lower()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
-                        <p class="big">3</p>
+                        <p class="big" id="number">3</p>
                     </div>
-                    <p>Sessões</p>
+                    <p class="typer">Sessões</p>
                 </div>
             </div>
         </section>
     </div>
+    <button id="continue">Continuar</button>
     <script src="scripts/api.js"></script>
+    <script> </script>
 </body>
 </html>
 
