Eu entendi a primeira, mas a segunda de bosta

--- a/inicio.html
+++ b/inicio.html
@@ -16,8 +16,8 @@
         <section>
             <div id="trabalho">
                 <div class="botao" id="work">
-                    <a href="#" onclick="upper()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
-                    <a href="#" onclick="lower()"><i class="fas fa-arrow-alt-circle-down"></i></a>
+                    <a href="#" onclick="bigger_check()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
@@ -30,12 +30,12 @@
         <section>
             <div id="pausa">
                 <div class="botao" id="pause">
-                    <a href="#" onclick="upper()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
-                    <a href="#" onclick="lower()"><i class="fas fa-arrow-alt-circle-down"></i></a>
+                    <a href="#" onclick="bigger_check()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
-                        <p class="big" id="number">5</p>
+                        <p class="big" id="number2">5</p>
                     </div>
                     <p class="typer">Pausa</p>
                 </div>
@@ -44,12 +44,12 @@
         <section>
             <div id="sessoes">
                 <div class="botao" id="sect">
-                    <a href="#" onclick="upper()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
-                    <a href="#" onclick="lower()"><i class="fas fa-arrow-alt-circle-down"></i></a>
+                    <a href="#" onclick="bigger_check()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
-                        <p class="big" id="number">3</p>
+                        <p class="big" id="number3">3</p>
                     </div>
                     <p class="typer">Sessões</p>
                 </div>
