O caminho andado finalmente

--- a/inicio.html
+++ b/inicio.html
@@ -16,42 +16,42 @@
         <section>
             <div id="trabalho">
                 <div class="botao" id="work">
-                    <a href="#" onclick="bigger_check()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="bigger_check(0)"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
                     <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
                         <p class="big" id="number">25</p>
                     </div>
-                    <p class="typer">Trabalho</p>
+                    <p>Trabalho</p>
                 </div>
             </div>
         </section>
         <section>
             <div id="pausa">
                 <div class="botao" id="pause">
-                    <a href="#" onclick="bigger_check()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="bigger_check(1)"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
                     <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
                         <p class="big" id="number2">5</p>
                     </div>
-                    <p class="typer">Pausa</p>
+                    <p>Pausa</p>
                 </div>
             </div>
         </section>
         <section>
             <div id="sessoes">
                 <div class="botao" id="sect">
-                    <a href="#" onclick="bigger_check()"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
+                    <a href="#" onclick="bigger_check(2)"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
                     <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
                         <p class="big" id="number3">3</p>
                     </div>
-                    <p class="typer">Sessões</p>
+                    <p>Sessões</p>
                 </div>
             </div>
         </section>
