--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,7 @@
             <div id="trabalho">
                 <div class="botao" id="work">
                     <a href="#" onclick="bigger_check(0)"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
-                    <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
+                    <a href="#" onclick="diminier_check(0)"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
@@ -31,7 +31,7 @@
             <div id="pausa">
                 <div class="botao" id="pause">
                     <a href="#" onclick="bigger_check(1)"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
-                    <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
+                    <a href="#" onclick="diminier_check(1)"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
@@ -45,7 +45,7 @@
             <div id="sessoes">
                 <div class="botao" id="sect">
                     <a href="#" onclick="bigger_check(2)"><i class="fas fa-arrow-alt-circle-up"></i><br></a>
-                    <a href="#" onclick="diminier_check()"><i class="fas fa-arrow-alt-circle-down"></i></a>
+                    <a href="#" onclick="diminier_check(2)"><i class="fas fa-arrow-alt-circle-down"></i></a>
                 </div>
                 <div class="hour">
                     <div class="box">
