--- a/pomodoro.html
+++ b/pomodoro.html
@@ -1,3 +1,24 @@
-Pomodoro
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <title>Pomodoro</title>
+</head>
+<body>
+    <header>Pomodoro <a href="inicio.html">Início</a></header>
+    <section>
+        <i class="fa-light fa-play"></i>
+        <aside>
+            
+        </aside>
+    </section>
+</body>
+</html>
+
+
+<!-- Pomodoro
 Início
-Trabalho
+Trabalho -->
