O pomodoro feito do 0 quase completo

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -9,14 +9,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>Pomodoro <a href="inicio.html">Início</a></header>
+    <header>Pomodoro <a href="/index.html">Início</a></header>
     <section>
-        <i class="fa-light fa-play"></i>
+
+        <i class="fas fa-play"></i>
         <aside>
-            
+            <input id="cronometer" disabled/>
+
+            <button id="play_pause">></button>
         </aside>
     </section>
 </body>
+<script src="scripts/pomo.js"></script>
 </html>
 
 
