--- a/inicio.html
+++ b/inicio.html
@@ -4,36 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - pomodoro</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
+    <title>Inicio - pomodoro</title>
 </head>
 <body>
     <h1>Pomodoro</h1>
     <section>
         <aside>
-            <button id="up-work"><i class="fa-solid fa-circle-arrow-up"></i></button>
-            <button id="down-work"><i class="fa-solid fa-circle-arrow-down"></i></button>
+            <button id="up-work" class="button"><i class="fa-solid fa-circle-arrow-up"></i></button>
+            <button id="down-work" class="button"><i class="fa-solid fa-circle-arrow-down"></i></button>
         </aside>
         <input id="traba" type="number" value="0" disabled>
         <label for="traba">Trabalho</label> <!--Comi o cu de quem tá lendo kkk-->
     </section>
     <section>
         <aside>
-            <button id="up-work"><i class="fa-solid fa-circle-arrow-up"></i></button>
-            <button id="down-work"><i class="fa-solid fa-circle-arrow-down"></i></button>
+            <button id="up-pause" class="button"><i class="fa-solid fa-circle-arrow-up"></i></button>
+            <button id="down-pause" class="button"><i class="fa-solid fa-circle-arrow-down"></i></button>
         </aside>
         <input id="pause" type="number" value="0" disabled>
         <label for="pause">Pausa</label>
     </section>
     <section>
         <aside>
-            <button id="up-work"><i class="fa-solid fa-circle-arrow-up"></i></button>
-            <button id="down-work"><i class="fa-solid fa-circle-arrow-down"></i></button>
+            <button id="up-session" class="button"><i class="fa-solid fa-circle-arrow-up"></i></button>
+            <button id="down-session" class="button"><i class="fa-solid fa-circle-arrow-down"></i></button>
         </aside>
         <input id="session" type="number" value="0" disabled>
         <label for="session">Pausa</label>
     </section>
+    <a href="pomodoro.html">Continuar</a>
+    
+    <script src="scripts/pomo.js"></script>
+    <script src="scripts/api.js"></script>
 </body>
 </html>
 
