--- a/inicio.html
+++ b/inicio.html
@@ -35,7 +35,10 @@
             <input type="number" disabled value="0">
             <legend>Sessões</legend>
         </section>
+
+        <a href="pomodoro.html">Continuar</a>
     </main>
+    <script src="scripts/api.js"></script>
 </body>
 </html>
 
