Modelando meu ovo

--- a/inicio.html
+++ b/inicio.html
@@ -36,7 +36,7 @@
             <legend>Sessões</legend>
         </section>
 
-        <a href="pomodoro.html">Continuar</a>
+        <div id="youregay"><a href="pomodoro.html">Continuar</a></div>
     </main>
     <script src="scripts/api.js"></script>
 </body>
