--- a/pomodoro.html
+++ b/pomodoro.html
@@ -9,13 +9,12 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>Pomodoro <a href="/index.html">Início</a></header>
+    <header>Pomodoro <a href="inicio.html">Início</a></header>
     <section>
 
         <i class="fas fa-play"></i>
         <aside>
             <input id="cronometer" disabled/>
-
             <button id="play_pause">></button>
         </aside>
     </section>
