O pomodoro quase completo

--- a/inicio.html
+++ b/inicio.html
@@ -21,16 +21,16 @@
         </section>
         <section>
             <aside>
-                <button id="up_work"><i class="fas fa-arrow-alt-circle-up"></i></button>
-                <button id="down_work"><i class="fas fa-arrow-alt-circle-down"></i></button>
+                <button id="up_pause"><i class="fas fa-arrow-alt-circle-up"></i></button>
+                <button id="down_pause"><i class="fas fa-arrow-alt-circle-down"></i></button>
             </aside>
             <input type="number" disabled value="0">
             <legend>Pause</legend>
         </section>
         <section>
             <aside>
-                <button id="up_work"><i class="fas fa-arrow-alt-circle-up"></i></button>
-                <button id="down_work"><i class="fas fa-arrow-alt-circle-down"></i></button>
+                <button id="up_session"><i class="fas fa-arrow-alt-circle-up"></i></button>
+                <button id="down_session"><i class="fas fa-arrow-alt-circle-down"></i></button>
             </aside>
             <input type="number" disabled value="0">
             <legend>Sessões</legend>
